# happiness-notes

./: QUICK-START.md  README.md  USAGE.md  exam-study-guide-mapping.json  lecture-naming.json  mapping.json  pyproject.toml
data/lecture-outlines-docx/: 1 Plato Lecture Outline.docx  11 Sartre Outline.docx  12 Bentham, Mill, Darwin Outline.docx  13 Haybron Outline.docx  15 Nussbaum Outline.docx  16 Mismatch, Foragers.docx  17 Liking VS Wanting, Supernormal Stimuli.docx  18 The Good Life Outline.docx  19 Braiding Sweetgrass Outline.docx  2 Aristotle Lecture Outline.docx  (+10 more)
lecture-notes/: 1-plato.md  10-zhuangzi.md  11-lyubomirsky.md  11-sartre.md  12-bentham,-mill,-darwin.md  12-bentham-mill-darwin.md  13-haybron.md  14-lyubomirsky.md  15-nussbaum.md  16-mismatch,-foragers.md  16-mismatch-foragers.md  17-liking-vs-wanting,-supernormal-stimuli.md  17-liking-vs-wanting-supernormal-stimuli.md  18-the-good-life.md  19-braiding-sweetgrass.md  2-aristotle.md  20-the-happiness-problem-handout.md  20-the-happiness-problem.md  21-haybron-again.md  3-epictetus.md  4-epicurus.md  5-upanishads.md  6-bhagavad-gita.md  7-buddha.md  8-mengzi.md  9-laozi.md  9-tao-te-ching.md
mapping/: exam-study-guide.json  lecture-naming.json
misc/: 2025 Exam 2 Study Guide.docx  Exam 1 Study Guide.docx  Happiness Syllabus - Fall 2025.docx  Happiness — Sample Application Piece.docx  Oral Exam Topics - Fall 2025.docx  Paper Topics - Fall 2025.docx
src/: __init__.py  convert_outlines.py  convert_readings.py  generate_master_pdf.py  generate_notes.py  generate_pdfs.py  generate_single.py  main.py
(+39 files in other folders)
