[project]
name = "happiness-notes"
version = "0.1.0"
description = "Generate comprehensive lecture notes from outlines and readings"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-docx>=1.0.0",
    "pypdf>=3.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

